Language dropdown on addons.mozilla.org changes size when scrolled
Categories
(Core :: Widget, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox111 | --- | unaffected |
| firefox112 | --- | unaffected |
| firefox113 | --- | verified |
| firefox114 | --- | verified |
People
(Reporter: gregp, Assigned: emilio)
References
(Regression, )
Details
(Keywords: regression)
Attachments
(2 files)
Steps to reproduce:
- Navigate to https://addons.mozilla.org/en-US/firefox/addon/ublock-origin/#lang-picker
- Open the menu labeled "Change language"
- Scroll the menu
Actual results:
Changes size
Expected results:
Does not change size
Comment 1•3 years ago
|
||
Set release status flags based on info from the regressing bug 1809084
:emilio, since you are the author of the regressor, bug 1809084, could you take a look? Also, could you set the severity field?
For more information, please visit auto_nag documentation.
Comment 2•3 years ago
|
||
I can also reproduce this on Windows10.
Screencast: https://youtu.be/EtrXJJQy4n4
Updated•3 years ago
|
| Assignee | ||
Comment 5•3 years ago
|
||
Otherwise we lose the anchor constraints which can change our layout.
The only thing we want is to stop following the anchor node, so we can
just convert it to an anchor rect instead.
Updated•3 years ago
|
| Assignee | ||
Updated•3 years ago
|
Comment 8•3 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/800f5495e4d6
https://hg.mozilla.org/mozilla-central/rev/93fa115838bb
Updated•3 years ago
|
Reproducible on a 2023-03-20 Nightly build on Ubuntu 22.
Verified as fixed on Firefox 113.0b3(build ID: 20230412155147) and Nightly 114.0a1(build ID: 20230413035039) on Ubuntu 22, macOS 12, Windows 10.
Description
•