Bug 1823552 - When fixing the position of a followanchor="false" popup, don't lose the anchor rect altogether. r=stransky

Otherwise we lose the anchor constraints which can change our layout.
The only thing we want is to stop following the anchor _node_, so we can
just convert it to an anchor rect instead.

Differential Revision: https://phabricator.services.mozilla.com/D173135